Start html code

--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="https://placekitten.com/96/139" type="image/x-icon">
-    <script src="https://unpkg.com/htmx.org@1.9.10" integrity="sha384-D1Kt99CQMDuVetoL1lrYwg5t+9QdHe7NLX/SoJYkXDFfX37iInKRy5xLSi8nO7UC" crossorigin="anonymous"></script>
-</head>
-<body>
-
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Famous Jedi Knights</title>
+  </head>
+  <body>
+    <h1>Jedi Knights</h1>
+    <h2>Obi Wan Kenobi</h2>
+    <p>
+      Obi-Wan Kenobi, a wise and skilled Jedi Knight, is one of the most iconic
+      characters in the Star Wars universe. Known for his calm demeanor, sharp
+      wit, and strong sense of duty, Obi-Wan played a crucial role in the
+      training of Anakin Skywalker and later his son, Luke Skywalker. Throughout
+      his journey, Obi-Wan faced numerous challenges, from battling Sith Lords
+      to navigating the complexities of war and betrayal. His unwavering
+      commitment to the Jedi Order and his deep understanding of the Force made
+      him a legendary figure, whose legacy continues to inspire hope in the
+      galaxy.
+    </p>
+    <img src="img/obiwankenobi.webp" alt="Obi Wan Kenobi">
+  </body>
 </html>
