--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Famous Jedi Knights</title>
+    <link rel="shortcut icon" href="img/obiwankenobi.webp" type="image/x-icon">
   </head>
   <body>
     <h1>Jedi Knights</h1>
